--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -7,6 +7,7 @@
     padding: 20px;
     gap: 50px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .contactInfo {
@@ -56,7 +57,7 @@
 
 .contactType {
     font-weight: bold;
-    color: #666;
+    color: #838C58;
 }
 
 .contactDetail {
