--- a/src/app/faireundon/faireundon.module.css
+++ b/src/app/faireundon/faireundon.module.css
@@ -208,7 +208,7 @@
 }
 
 .donationSection {
-  padding: 60px 0;
+  /* padding: 60px 0; */
   background: #ffffff;
   position: relative;
 }
@@ -381,7 +381,7 @@
 }
 
 .associationInfo {
-  padding: 50px 0;
+  padding: 100px 0;
   background: #ffffff;
   text-align: center;
 }
