--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -105,11 +105,7 @@
   transition: color 0.2s ease-in-out;
   text-decoration: none;
   border-radius: 0.375rem;
-}
-
-.dropdownToggle:hover {
-  color: #838C58;
-  background-color: rgba(131, 140, 88, 0.1);
+  margin-left: 10px;
 }
 
 .dropdownArrow {
