--- a/src/app/actualites/actualites.module.css
+++ b/src/app/actualites/actualites.module.css
@@ -169,6 +169,7 @@
 }
 
 .registerButton {
+  display: inline-block;
   background-color: #8b7355;
   color: white;
   border: none;
@@ -179,10 +180,15 @@
   cursor: pointer;
   transition: background-color 0.2s ease;
   width: 100%;
+  text-decoration: none;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .registerButton:hover {
   background-color: #6d5a42;
+  color: white;
+  text-decoration: none;
 }
 
 .registerButton:active {
